[package]
name = "chasam"
version = "0.1.0"
edition = "2021"
authors = [
    "Tiago Martins <tiago.tsmweb@gmail.com>",
    "Hericson dos Santos <hericson.cipol@gmail.com>",
]
license = "MPL 2.0"
description = "Application that searches CSAM content in images and videos."
homepage = "https://github.com/forensicht/chasam"
repository = "https://github.com/forensicht/chasam/"
readme = "README.md"

[workspace]
members = ["core"]

[profile.release]
strip = true

[profile.test]
opt-level = 1

[dependencies]
i18n-embed-fl = "0.8.0"
once_cell = "1.18"
strum = "0.26.1"
strum_macros = "0.26.1"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
anyhow = "1.0.75"
num_cpus = "1.16.0"
open = "5.0.1"
toml = "0.8.8"
chrono = "0.4.34"
bytes = "1.5.0"
lazy_static = "1.4.0"

[dependencies.core_chasam]
path = "core"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rust-embed]
version = "8.2.0"
features = ["debug-embed"]

[dependencies.i18n-embed]
version = "0.14.1"
features = ["fluent-system", "desktop-requester"]

[dependencies.relm4]
version = "0.8.1"
features = ["macros", "libadwaita", "gnome_44"]

[dependencies.relm4-components]
version = "0.8.1"

[dependencies.relm4-icons]
version = "0.8.2"

[build-dependencies]
glib-build-tools = "0.19.0"
