[package]
name = "chasam"
version = "0.1.0"
edition = "2021"
authors = [
    "Tiago Martins <tiago.tsmweb@gmail.com>",
    "Hericson dos Santos <hericson.cipol@gmail.com>",
]
license = "MPL 2.0"
description = "Application that searches CSAM content in images and videos."
homepage = "https://github.com/forensicht/chasam"
repository = "https://github.com/forensicht/chasam/"
readme = "README.md"

[workspace]
members = ["core"]

[workspace.dependencies]
anyhow = "1.0.86"
num_cpus = "1.16.0"
chrono = "0.4.38"
tracing = "0.1.39"
bytes = "1.7.1"
rust-embed = { version = "8.5.0", features = ["debug-embed"] }

[profile.release]
strip = true
# lto = true
debug = false
debug-assertions = false

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[dependencies]
anyhow = { workspace = true }
num_cpus = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
rust-embed = { workspace = true }
i18n-embed-fl = "0.9.1"
once_cell = "1.19.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tracing-subscriber = "0.3.17"
open = "5.3.0"
toml = "0.8.19"
num-format = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
i18n-embed = { version = "0.15.0", features = [
    "fluent-system",
    "desktop-requester",
] }
relm4 = { version = "0.9.0", features = ["macros", "libadwaita", "gnome_44"] }
relm4-components = "0.9.1"
relm4-icons = "0.9.0"

[dependencies.core_chasam]
path = "core"

[build-dependencies]
glib-build-tools = "0.20.0"
