[package]
name = "core_chasam"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 3

[dependencies]
tokio = { version = "1.36", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
    "io-util",
    "macros",
] }
anyhow = { workspace = true }
num_cpus = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
rust-embed = { workspace = true }
walkdir = "2.4.0"
threadpool = "1.8.1"
image = "0.24.7"
imageproc = "0.23.0"
ffmpeg-next = "7.1.0"
sha-1 = "0.10.1"
md5 = "0.7.0"
hex = "0.4.3"
futures = "0.3.30"
